--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Drum Kit</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="javascript/jquery.rwdImageMaps.min.js"></script>
   <script src="javascript/jquery.maphilight.min.js"></script>
   <link rel="stylesheet" href="style.css">
+  <title>Drum Kit</title>
+  <link rel="icon" type="image/x-icon" href="https://img.icons8.com/glyph-neue/64/000000/snare-drum.png">
 </head>
 <body>
 
